--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <audio id="background-music" autoplay loop>
-    <source src="https://files.catbox.moe/3c93at.mp3" type="audio/mpeg">
+  <audio id="background-music">
+  <source src="https://files.catbox.moe/3c93at.mp3" type="audio/mpeg">
   </audio>
   <div class="container">
     <div class="snowman" id="snowman">
