--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <audio id="background-music">
   <source src="https://files.catbox.moe/3c93at.mp3" type="audio/mpeg">
   </audio>
+  <div id="welcome-message" class="welcome hidden">
+  <h1>كل سنه وانتي معايا يا احلي تبارك في الكون</h1>
+  </div>
   <div class="container">
     <div class="snowman" id="snowman">
       <img src="https://i.ibb.co/Dk8Y6Mk/copilot-image-1735475929266-removebg-preview.png" alt="رجل الثلج">
