--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <audio id="background-music">
   <source src="https://files.catbox.moe/3c93at.mp3" type="audio/mpeg">
   </audio>
-  <div id="welcome-message" class="welcome hidden">
-  <h1>كل سنه وانتي معايا يا احلي تبارك في الكون</h1>
+  <div id="welcome-message" class="welcome">
+  <span class="word">كل سنة</span>
+  <span class="word">وانتي معايا</span>
+  <span class="word">يا ماما</span>
+   <span class="word">💕🌍</span>
   </div>
   <div class="container">
     <div class="snowman" id="snowman">
