--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <video class="video-background" autoplay muted loop>
+    <source src="https://files.catbox.moe/x5scue.mp4" type="video/mp4">
+    متصفحك لا يدعم تشغيل الفيديو.
+  </video>
   <audio id="background-music">
   <source src="https://files.catbox.moe/3c93at.mp3" type="audio/mpeg">
   </audio>
