--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تهنئة عيد الكريسماس</title>
   <link rel="stylesheet" href="styles.css">
+  <meta name="description" content="happy new year tabarak 🎄✨">
+    <meta name="image" content="https://i.ibb.co/cLqLnzW/copilot-image-1735107452984.jpg">
+
+    <!-- Open Graph meta tags for social media platforms (including WhatsApp) -->
+    <meta property="og:title" content="happy new year tabarak 🎄✨">
+    <meta property="og:description" content="You were the best for me this year 🙈💕">
+    <meta property="og:image" content="https://i.ibb.co/cLqLnzW/copilot-image-1735107452984.jpg>
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    
+    <!-- Twitter Card meta tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="https://i.ibb.co/cLqLnzW/copilot-image-1735107452984.jpg">
+  
 </head>
 <body>
   <audio id="background-music">
