--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Open Graph meta tags for social media platforms (including WhatsApp) -->
     <meta property="og:title" content="happy new year tabarak 🎄✨">
-    <meta property="og:description" content="You were the best for me this year 🙈💕">
+    <meta property="og:description" content="you are the best For me">
     <meta property="og:image" content="https://i.ibb.co/t4PKdRy/81d8a09c2c6f7ce1495c2376169bbdf1.jpg>
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
