--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>تهنئة عيد الكريسماس</title>
+  <title>happy new year tabarak 🎄✨</title>
   <link rel="stylesheet" href="styles.css">
   <meta name="description" content="happy new year tabarak 🎄✨">
     <meta name="image" content="https://i.ibb.co/t4PKdRy/81d8a09c2c6f7ce1495c2376169bbdf1.jpg">
